--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="referrer" content="no-referrer"><title>PRODUCTION</title><style></style></head><body><base href="./"><div id="app"></div><script src="//cdn.staticfile.org/d3/4.13.0/d3.min.js"></script><script src="dist/static/js/wen.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
